2007-06-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::filesave): Typo fixed. It had caused failure for image upload by XMLRPC.

2007-06-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/admin/shared/add_banlist.rhtml: Change to hide help message (default). It can toggle hide/show.

	* donrails/app/controllers/admin/system_controller.rb (Admin::manage_don_env): Change to show current configuration when no ID is inputted.

	* donrails/app/views/admin/system/manage_don_ping.rhtml: Add to show ping queuing time and sending time.

2007-05-29  Akira TAGOH  <at@gclab.org>

	* upgrade_1_7.postgresql.sql: New.

	* donrails/tool/tables-postgresql.sql: Updated.

2007-05-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New option. -n, -u, --force

	* donrails/app/controllers/notes_controller.rb (NotesController::catch_ping): Fix for wrong content-type return.
	(NotesController::catch_trackback): likewise.

2007-05-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb: New file. It is Proxy ping module.

	* upgrade_1_7.mysql.sql: New file.

	* donrails/app/controllers/admin/system_controller.rb (Admin::add_don_env): Add ping_async entry.
	* donrails/app/views/admin/shared/edit_don_env.rhtml: likewise.
	* donrails/app/models/article.rb (Article::send_pings2): Add for don_get_config.ping_async.

2007-05-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Now we can 'rake test' at off-line.
	* donrails/lib/akismet.rb (Akismet::call_akismet): When donrails does not use Akismet, return @reasonString.
	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest): Change to test this.

2007-05-19  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController::don_is_spam): Add 'Akismet' timeout error handling.

2007-05-10  ARAKI Yasuhiro  <yasu@debian.or.jp>
