@@ -1,3 +1,7 @@
+2007-06-06  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/models/article.rb (Article::sendping): Fix for sending ping of hidden article.
+
 2007-06-02  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/models/don_attachment.rb (DonAttachment::filesave): Typo fixed. It had caused failure for image upload by XMLRPC.
